update handle response
